--- a/styles.css
+++ b/styles.css
@@ -154,7 +154,7 @@ a.nav-link,a.navbar-brand {
 }
 
 a.nav-link:hover,a.navbar-brand:hover {
-  color: #efce14;
+  color: #00E0C9;
 }
 
 /* Badges */
